# rollio-ng

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  airbot.toml  build.sh  config.toml  extract_episode_frame.py  packaging.md  rustfmt.toml
.github/workflows/: ci.yml
cameras/: CMakeLists.txt
cameras/pseudo/src/: main.cpp
cameras/pseudo/tests/: runtime.cpp
cameras/realsense/: CMakeLists.txt
cameras/realsense/src/: main.cpp
cameras/realsense/tests/: runtime.cpp
cameras/v4l2/: Cargo.toml
cameras/v4l2/src/: main.rs
config/: config.d435i-v4l2-airbot-play-eef.sprint5.toml  config.example.toml  config.pseudo-web.toml  config.v4l2-realsense-rgb.toml
control-server/: Cargo.toml
control-server/src/: ipc.rs  lib.rs  main.rs  protocol.rs  websocket.rs
control-server/tests/: integration.rs
controller/: Cargo.toml
controller/src/: cli.rs  collect.rs  device_query.rs  discovery.rs  lib.rs  process.rs  runtime_paths.rs  runtime_plan.rs  setup.rs
controller/tests/: collect_smoke.rs
debian/: README.md
debian/DEBIAN/: control.in  postinst  postrm
design/: components.md  device-as-binaries.md  implementation-plan.md  sprint-1-plan.md  sprint-2-execution-plan.md  sprint-3-plan.md  sprint-4-part-a-plan.md  sprint-4-part-b-5-plan.md  sprint-extra-a.md
encoder/: Cargo.toml
encoder/src/: error.rs  lib.rs  main.rs  media.rs  probe.rs  runtime.rs
encoder/tests/: runtime.rs
episode-assembler/: Cargo.toml
episode-assembler/src/: dataset.rs  runtime.rs
monitor/: Cargo.toml
robots/airbot_eef/src/: lib.rs  runtime.rs
robots/airbot_play/: pyproject.toml
robots/airbot_play/tests/: test_runtime.py
robots/airbot_play_rust/: Cargo.toml
robots/airbot_play_rust/scripts/: airbot_mode_keyboard.py
robots/airbot_play_rust/src/: lib.rs  main.rs  rollio_runtime.rs
robots/nero/: README.md  pyproject.toml
robots/nero/scripts/: nero_mode_keyboard.py
robots/nero/src/rollio_device_nero/: __init__.py  cli.py  config.py  gravity.py  ik.py  probe.py  query.py
robots/nero/src/rollio_device_nero/ipc/: __init__.py  services.py  types.py
robots/nero/src/rollio_device_nero/runtime/: __init__.py  agx_backend.py  arm.py  device.py  gripper.py  iox_ipc.py
robots/nero/tests/: test_config.py  test_gravity.py  test_ik.py  test_ipc_types.py  test_runtime_modes.py
robots/pseudo/: Cargo.toml
robots/pseudo/src/: lib.rs  main.rs
rollio-bus/: Cargo.toml
rollio-bus/src/: lib.rs
rollio-types/: Cargo.toml
rollio-types/src/: config.rs  messages.rs  schema.rs
rollio-types/tests/: config.rs  config_d435i_v4l2_airbot_play_eef_sprint5.rs  messages.rs  schema_cli.rs
storage/: Cargo.toml
storage/src/: runtime.rs
teleop-router/: Cargo.toml
teleop-router/src/: lib.rs
teleop-router/tests/: runtime.rs
test-publisher/src/: frames.rs  main.rs
test/bus-tap/: Cargo.toml
test/bus-tap/src/: main.rs
test/robot-keyboard/: Cargo.toml
test/robot-keyboard/src/: state.rs
test/test-publisher/: Cargo.toml
test/test-publisher/src/: main.rs
ui/: package-lock.json  package.json
ui-server/: Cargo.toml
ui-server/src/: main.rs
ui/harri-wasm-core/: Cargo.toml
ui/harri-wasm-core/src/: lib.rs
ui/native-ascii-addon/: Cargo.toml
ui/scripts/: build-harri-wasm.mjs
ui/src/: App.tsx  index.tsx
ui/src/components/: DebugPanel.tsx  StatusBar.tsx  StreamPanel.tsx
ui/src/lib/: ansi-renderer.ts  protocol.ts  websocket.ts
ui/terminal/: package-lock.json  package.json
ui/test/: layout-and-geometry.test.ts  render-contract.test.ts  runtime-config.test.ts
ui/web/: index.html  package-lock.json  package.json
visualizer/: Cargo.toml
visualizer/src/: ipc.rs  jpeg.rs  main.rs  preview_pipeline.rs  protocol.rs  stream_info.rs  websocket.rs
(+59 files in other folders)
