[workspace]
resolver = "2"
members = [
    "rollio-bus",
    "rollio-types",
    "controller",
    "visualizer",
    "teleop-router",
    "encoder",
    "episode-assembler",
    "storage",
    "monitor",
    "robots/pseudo",
    "robots/airbot_play_rust",
    "test/test-publisher",
    "cameras/v4l2",
    "test/robot-keyboard",
]
exclude = ["third_party"]
