[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollio-device-nero"
version = "1.0.0"
description = "AGX Nero (7-DOF arm + AGX gripper) device driver for the Rollio framework"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pin>=3.0",
    "iceoryx2==0.8.1",
    "pyAgxArm @ git+https://github.com/agilexrobotics/pyAgxArm.git@20621b94ff15ae1b32cf81cce127cb49f1bfcaf4",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
rollio-device-agx-nero = "rollio_device_nero.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rollio_device_nero = [
    "assets/*.urdf",
]

# Released installs use PyPI (iceoryx2) and upstream GitHub (pyAgxArm). For
# repo development you can `pip install -e` third_party copies to override.
